--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "kot-da-vinci",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,18 @@
   },
   "homepage": "https://github.com/qqsh1ne/kot-da-vinci#readme",
   "devDependencies": {
-    "eslint": "8.30.0"
+    "concurrently": "^7.6.0",
+    "eslint": "8.30.0",
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "lint": "^0.8.19"
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.8",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
+    "lint": "^0.8.19",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3"
   }
 }
